Updated Routs and Some layout details

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/room.css">
-    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/room.css">
+    <link rel="stylesheet" href="/css/modal.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Scripts -->
-    <script src="scripts/main.js" defer type="module"></script>
+    <script src="/scripts/main.js" defer type="module"></script>
     <script src="https://kit.fontawesome.com/cfaedefc96.js" crossorigin="anonymous"></script>
     <!-- Title -->
     <title>Mission: Discover</title>
@@ -22,16 +22,16 @@
 <body>
     <div id="room" class="content">
         <header class="logo">
-            <a href=""><img src="images/logo.png" alt="Rocket.Q logo"></a>
+            <a href="/"><img src="/images/logo.png" alt="Rocket.Q logo"></a>
 
             <div class="buttons">
                 <div class="button outlined" id="room-id" data-id="323243">
                     #323243
-                    <img src="images/copy.svg" alt="Copiar numero da sala">
+                    <img src="/images/copy.svg" alt="Copiar numero da sala">
                 </div>
 
                 <a href="#" class="button">
-                    <img src="images/users.svg" alt="Criar uma sala">
+                    <img src="/images/users.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
             </div>
