--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/global.css">
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
 <body>
     <div id="home" class="content">
         <header class="logo">
-            <img src="images/logo.png" alt="">
+            <a href="/"><img src="/images/logo.png" alt=""></a>            
         </header>
 
         <div id="bg">
@@ -30,25 +30,7 @@
     
         <main>
             <div class="container">
-                <section class="enter">
-                    <h2>Entre como participante</h2>
-                    <form action="">
-                        <label for="room-id" class="sr-only">Código da sala</label>
-                        <input id="room-id" type="number" placeholder="Código da Sala">
-                        <button type="" class="button"><i class="fas fa-sign-in-alt"></i> Entrar na Sala</button>
-                    </form>
-                </section>
-    
-                <div class="separator">
-                    <div></div>
-                    <div>ou</div>
-                    <div></div>
-                </div>
-    
-                <section>
-                    <h2>Crie sua própria sala de forma fácil</h2>
-                    <a href="create-room.html" class="button outlined"><i class="fas fa-users"></i> Criar Sala</a>
-                </section>
+                <%- include(`parts/${page}`)%>
             </div>
         </main>
     </div>
