--- a/public/css/room.css
+++ b/public/css/room.css
@@ -158,3 +158,22 @@ a{
 .question-wrapper.read .fa-check{
     color: green;
 }
+
+.no-questions{
+    text-align: center;
+    margin-top: 5.2rem;    
+}
+
+.no-questions p:nth-child(2){
+    font-family: var(--titlefont);
+    font-weight: 600;
+    font-size: 1.8rem;
+    margin-top: 1.2rem;   
+}
+
+.no-questions p:nth-child(3){
+    margin-top: 1.3rem;
+    font-family: var(--textfont);
+    font-weight: 400;
+    font-size: 1.4rem;
+}
