--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -1,8 +1,8 @@
 <section class="enter">
     <h2>Entre como participante</h2>
-    <form action="">
+    <form action="/enterroom" method="POST">
         <label for="room-id" class="sr-only">Código da sala</label>
-        <input id="room-id" type="number" placeholder="Código da Sala">
+        <input name="roomId" id="room-id" type="number" placeholder="Código da Sala">
         <button type="" class="button"><i class="fas fa-sign-in-alt"></i> Entrar na Sala</button>
     </form>
 </section>
