--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -25,12 +25,12 @@
             <a href="/"><img src="/images/logo.png" alt="Rocket.Q logo"></a>
 
             <div class="buttons">
-                <div class="button outlined" id="room-id" data-id="323243">
-                    #323243
+                <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+                    #<%= roomId %>
                     <img src="/images/copy.svg" alt="Copiar numero da sala">
                 </div>
 
-                <a href="#" class="button">
+                <a href="/create-pass" class="button">
                     <img src="/images/users.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
@@ -41,7 +41,7 @@
             <section id="question-form">
                 <h2>Faça a sua pergunta</h2>
 
-                <form action="">
+                <form action="/question/create/<%= roomId %>" method="POST">
                     <label for-id="question" class="sr-only">O que você quer perguntar?</label>
                     <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
                     
@@ -58,75 +58,47 @@
 
             <section id="questions">
                 <h2 class="sr-only">Perguntas da comunidade</h2>
-                
                 <div class="questions">
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <i class="fas fa-user-circle"></i>
-                            </div>
-                            
-                            <div class="question">
-                                <p>Qual a diferença entre const, var e let no JavaScript?</p>
-                            </div>
-                        </div>
-                        
-                        <div class="actions">
-                            <a href="#" class="check" data-id="2"><i class="fas fa-check"></i>Marcar como lida</a>
-                            <a href="#" class="delete" data-id="2"><i class="far fa-trash-alt"></i>Excluir</a>
-                        </div>
-                    </div>
 
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <i class="fas fa-user-circle"></i>
+                    <% if(isNoQuestions){%>
+                        <%- include('parts/noquestion')%>
+                    <%}%>
+                    <% questions.forEach(question => {%>
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <i class="fas fa-user-circle"></i>
+                                </div>
+                                
+                                <div class="question">
+                                    <p><%= question.title %></p>
+                                </div>
                             </div>
                             
-                            <div class="question">
-                                <p>O que é TypeScript?</p>
+                            <div class="actions">
+                                <a href="#" class="check" data-id="<%= question.id%>"><i class="fas fa-check"></i>Marcar como lida</a>
+                                <a href="#" class="delete" data-id="<%= question.id%>"><i class="far fa-trash-alt"></i>Excluir</a>
                             </div>
-                        </div>
-                        
-                        <div class="actions">
-                            <a href="#" class="check" data-id="3"><i class="fas fa-check"></i>Marcar como lida</a>
-                            <a href="#" class="delete" data-id="3"><i class="far fa-trash-alt"></i>Excluir</a>
-                        </div>
-                    </div>
-
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <i class="fas fa-user-circle"></i>
-                            </div>
-                            
-                             <div class="question">
-                                <p></p>
-                            </div>
-                        </div>
-                        
-                        <div class="actions">
-                            <a href="#" class="check" data-id="4"><i class="fas fa-check"></i>Marcar como lida</a>
-                            <a href="#" class="delete" data-id="4"><i class="far fa-trash-alt"></i>Excluir</a>
-                        </div>
-                    </div>
-
-                    <div class="question-wrapper read">
-                        <div class="question-content">
-                            <div class="user">
-                                <i class="fas fa-user-circle"></i>
+                        </div>                    
+                    <% });%>
+                    
+                    <% questionsRead.forEach(questionsRead => { %>
+                        <div class="question-wrapper read">
+                            <div class="question-content">
+                                <div class="user">
+                                    <i class="fas fa-user-circle"></i>
+                                </div>
+                                
+                                <div class="question">
+                                    <p><%= questionsRead.title %></p>
+                                </div>
                             </div>
                             
-                            <div class="question">
-                                <p>O que é JavaScript?</p>
+                            <div class="actions">
+                                <a href="#" class="delete" data-id="<%= questionsRead.id%>"><i class="far fa-trash-alt"></i>Excluir</a>
                             </div>
                         </div>
-                        
-                        <div class="actions">
-                            <!-- <a href="#" ><i class="fas fa-check"></i>Pergunta Lida</a> -->
-                            <a href="#" class="delete" data-id="1"><i class="far fa-trash-alt"></i>Excluir</a>
-                        </div>
-                    </div>
+                    <% }); %>
                 </div>
             </section>
         </main>
